# azahar

src/: CMakeLists.txt
src/citra_qt/: CMakeLists.txt  citra_qt.cpp  citra_qt.h  game_grid_widget.cpp  game_grid_widget.h  game_list.cpp  game_list.h
src/citra_qt/configuration/: config.cpp  configure_graphics.ui
src/common/: common_precompiled_headers.h  file_util.cpp  settings.h  win32_undef_last.h
src/common/x64/: cpu_detect.cpp
src/core/: CMakeLists.txt  core.cpp  core.h
src/core/file_sys/: archive_artic.cpp  archive_artic.h  archive_backend.h  archive_nand.cpp  archive_nand.h  archive_ncch.cpp  archive_ncch.h  archive_sdmc.cpp  archive_sdmc.h  archive_selfncch.cpp  ivfc_archive.cpp  ivfc_archive.h  savedata_archive.cpp  savedata_archive.h
src/core/frontend/: emu_window.cpp  framebuffer_layout.cpp  framebuffer_layout.h
src/core/hle/kernel/: event.cpp  hle_ipc.cpp  kernel.h  mutex.cpp  process.cpp  semaphore.cpp  svc.cpp
src/core/hle/service/am/: am.cpp
src/core/hle/service/apt/: applet_manager.cpp
src/core/hle/service/boss/: boss.cpp
src/core/hle/service/cam/: cam.cpp  y2r_u.cpp
src/core/hle/service/cecd/: cecd.cpp
src/core/hle/service/cfg/: cfg.cpp
src/core/hle/service/csnd/: csnd_snd.cpp
src/core/hle/service/dlp/: dlp_base.cpp
src/core/hle/service/dsp/: dsp_dsp.cpp
src/core/hle/service/fs/: archive.cpp  archive.h  fs_user.cpp  fs_user.h
src/core/hle/service/hid/: hid.cpp
src/core/hle/service/ir/: ir_rst.cpp  ir_user.cpp
src/core/hle/service/mic/: mic_u.cpp
src/core/hle/service/news/: news.cpp
src/core/hle/service/nfc/: nfc_device.cpp
src/core/hle/service/nim/: nim_u.cpp
src/core/hle/service/nwm/: nwm_uds.cpp
src/core/hle/service/plgldr/: plgldr.cpp
src/core/hle/service/sm/: srv.cpp
src/core/loader/: 3dsx.cpp  artic.cpp  elf.cpp  ncch.cpp
src/input_common/: CMakeLists.txt  main.cpp  main.h
src/input_common/udp/: remote_switch.cpp  remote_switch.h
src/tests/audio_core/merryhime_3ds_audio/merry_audio/: merry_audio.cpp  service_fixture.h
src/tests/core/hle/kernel/: hle_ipc.cpp
src/tests/core/memory/: memory.cpp
src/video_core/: CMakeLists.txt  ScreenStreamer.cpp  ScreenStreamer.h  video_core.cpp
src/video_core/renderer_metal/: metal_device.h  metal_device.mm  metal_texture_mailbox.h  metal_texture_mailbox.mm  present.metal  renderer_metal.h  renderer_metal.mm
src/video_core/renderer_opengl/: renderer_opengl.cpp  renderer_opengl.h
src/video_core/renderer_software/: renderer_software.cpp
src/video_core/renderer_vulkan/: renderer_vulkan.cpp  renderer_vulkan.h  vk_instance.cpp  vk_instance.h  vk_master_semaphore.cpp  vk_shader_disk_cache.cpp  vk_shader_disk_cache.h
